<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.joshuagrisham.kafka.connect</groupId>
        <artifactId>jdbc-source-connector-generator</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <artifactId>jdbc-source-connector-generator-app</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Kafka JDBC Source Connector Generator App</name>

    <properties>
        <compiler-plugin.version>3.12.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.10.0</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.2.5</surefire-plugin.version>

        <!-- Kryptonite's dependency versions -->
        <google.tink.version>1.7.0</google.tink.version>
        <kryo.version>5.4.0</kryo.version>
        <kryo.serializers>0.45</kryo.serializers>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.joshuagrisham.kafka.connect</groupId>
            <artifactId>jdbc-source-querier</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.joshuagrisham.avro</groupId>
            <artifactId>avro-xml-converter</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-qute</artifactId>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-avro-data</artifactId>
            <version>7.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-json</artifactId>
            <version>3.7.0</version>
        </dependency>

        <!-- Add dependencies for desired Transformation classes -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-transforms</artifactId>
            <version>3.7.0</version>
        </dependency>
        <!-- expandjsonsmt is not published in Maven Central ??
        <dependency>
            <groupId>com.redhat.insights.expandjsonsmt</groupId>
            <artifactId>kafka-connect-smt-expandjsonsmt</artifactId>
            <version>0.0.7</version>
        </dependency>
        -->
        <!-- connect-transform-kryptonite is not published in Maven Central ?? 
        <dependency>
            <groupId>com.github.hpgrahsl</groupId>
            <artifactId>connect-transform-kryptonite</artifactId>
            <version>0.4.2</version>
        </dependency>
        -->

        <!-- Add Kryptonite's external dependencies directly so we don't have to manually install all of them -->
        <dependency>
            <groupId>com.google.crypto.tink</groupId>
            <artifactId>tink</artifactId>
            <version>${google.tink.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.crypto.tink</groupId>
            <artifactId>tink-gcpkms</artifactId>
            <version>${google.tink.version}</version>
        </dependency>  
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
            <version>${kryo.version}</version>
        </dependency>
        <dependency>
            <groupId>de.javakaffee</groupId>
            <artifactId>kryo-serializers</artifactId>
            <version>${kryo.serializers}</version>
        </dependency>

        <!-- Add Kryptonite and ExpandJSON SMTs from files fetched using download-maven-plugin below
        -->
        <dependency>
            <groupId>com.github.hpgrahsl</groupId>
            <artifactId>kryptonite</artifactId>
            <version>0.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.hpgrahsl</groupId>
            <artifactId>connect-transform-kryptonite</artifactId>
            <version>0.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.redhat.insights.expandjsonsmt</groupId>
            <artifactId>kafka-connect-smt-expandjsonsmt</artifactId>
            <version>0.0.7</version>
        </dependency>


        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-container-image-jib</artifactId>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>1.9.0</version>
                <executions>
                    <execution>
                        <id>get-kryptonite-smt</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <uri>https://github.com/hpgrahsl/kryptonite-for-kafka/releases/download/v0.4.2/connect-transform-kryptonite-0.4.2.zip</uri>
                            <url>https://github.com/hpgrahsl/kryptonite-for-kafka/releases/download/v0.4.2/connect-transform-kryptonite-0.4.2.zip</url>
                            <unpack>true</unpack>
                            <outputDirectory>${project.build.directory}/downloaded</outputDirectory>
                            <md5>398f34edc61702deb342a30f7c794acb</md5>
                        </configuration>
                    </execution>
                    <execution>
                        <id>get-kryptonite-pom</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <uri>https://raw.githubusercontent.com/hpgrahsl/kryptonite-for-kafka/v0.4.2/pom.xml</uri>
                            <url>https://raw.githubusercontent.com/hpgrahsl/kryptonite-for-kafka/v0.4.2/pom.xml</url>
                            <unpack>false</unpack>
                            <outputDirectory>${project.build.directory}/downloaded/connect-transform-kryptonite</outputDirectory>
                            <md5>f583c4956508b06cd35cf45b50addb51</md5>
                        </configuration>
                    </execution>
                    <execution>
                        <id>get-expandjson-smt</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <uri>https://github.com/RedHatInsights/expandjsonsmt/releases/download/0.0.7/kafka-connect-smt-expandjsonsmt-0.0.7.tar.gz</uri>
                            <url>https://github.com/RedHatInsights/expandjsonsmt/releases/download/0.0.7/kafka-connect-smt-expandjsonsmt-0.0.7.tar.gz</url>
                            <unpack>true</unpack>
                            <outputDirectory>${project.build.directory}/downloaded/kafka-connect-smt-expandjsonsmt</outputDirectory>
                            <md5>7e5b4c0fab7ce2768a46e13835b55f6d</md5>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <?m2e execute onConfiguration,onIncremental?> <!-- TODO: what is the right approach here?? -->
                        <id>install-kryptonite-pom</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.build.directory}/downloaded/connect-transform-kryptonite/pom.xml</file>
                            <packaging>pom</packaging>
                            <groupId>com.github.hpgrahsl</groupId>
                            <artifactId>kryptonite-for-kafka</artifactId>
                            <version>0.4.2</version>
                            <generatePom>false</generatePom>
                        </configuration>
                    </execution>
                    <execution>
                        <?m2e execute onConfiguration,onIncremental?> <!-- TODO: what is the right approach here?? -->
                        <id>install-kryptonite-base</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.build.directory}/downloaded/connect-transform-kryptonite/kryptonite-0.4.2.jar</file>
                            <packaging>jar</packaging>
                            <groupId>com.github.hpgrahsl</groupId>
                            <artifactId>kryptonite</artifactId>
                            <version>0.4.2</version>
                            <generatePom>false</generatePom>
                        </configuration>
                    </execution>
                    <execution>
                        <?m2e execute onConfiguration,onIncremental?> <!-- TODO: what is the right approach here?? -->
                        <id>install-kryptonite-smt</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.build.directory}/downloaded/connect-transform-kryptonite/connect-transform-kryptonite-0.4.2.jar</file>
                            <packaging>jar</packaging>
                            <groupId>com.github.hpgrahsl</groupId>
                            <artifactId>connect-transform-kryptonite</artifactId>
                            <version>0.4.2</version>
                            <generatePom>false</generatePom>
                        </configuration>
                    </execution>
                    <execution>
                        <?m2e execute onConfiguration,onIncremental?> <!-- TODO: what is the right approach here?? -->
                        <id>install-expandjson-smt</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <file>${project.build.directory}/downloaded/kafka-connect-smt-expandjsonsmt/kafka-connect-smt-expandjsonsmt-0.0.7-assemble-all.jar</file>
                            <packaging>jar</packaging>
                            <groupId>com.redhat.insights.expandjsonsmt</groupId>
                            <artifactId>kafka-connect-smt-expandjsonsmt</artifactId>
                            <version>0.0.7</version>
                            <generatePom>false</generatePom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <!-- Allow reflection for core java packages; Kryptonite does not work without this (`module java.base does not "opens java.util" to unnamed module`) -->
                    <compilerArgs>
                        <arg>--add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <jvmArgs>--add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED</jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <systemPropertyVariables>
                        <native.image.path>
                            ${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.package.type>native</quarkus.package.type>
            </properties>
        </profile>
    </profiles>
</project>
